ingress/apache-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service

spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
    type: webserver
