ingress/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service

spec:
  ports:
    - port: 80
  selector:
    type: proxy
