ingress/tomcat-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  ports:  
    - targetPort: 8080
      port: 8080
  selector:
    type: appserver
