ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    type: ingress
spec:
  rules:  
    - host: tomcat.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomca-service
                port:
                  number: 8080  
    - host: apache.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port: 
                  number: 80
    - host: nginx.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            beckend:
              service:
                name: nginx-service
                port:
                  number: 80
